--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,7 +1,7 @@
 .header {
   min-height: 100vh;
   width: 100%;
-  background-image: url("../../img/bg.svg");
+  background-image: url("../../assets/img/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 100%;
