--- a/src/components/ChartSecton/ChartStats/styles.scss
+++ b/src/components/ChartSecton/ChartStats/styles.scss
@@ -3,7 +3,7 @@
   border-radius: 50px;
   border: 1px solid var(--border-colour);
   height: 10rem;
-  width: 14rem;
+  width: 100%;
   padding: 2rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   h4 {
