--- a/src/components/FaqSection/Question/styles.scss
+++ b/src/components/FaqSection/Question/styles.scss
@@ -15,6 +15,7 @@
         span {
             display: flex;
             align-items: center;
+            padding-left: 20px;
             img {
                 width: 24px;
             }
