--- a/src/components/PaymentSection/styles.scss
+++ b/src/components/PaymentSection/styles.scss
@@ -1,8 +1,12 @@
 .payment {
-    &__card {
-        padding-top: 30px;
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-gap: 2rem;
+  &__card {
+    padding-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+
+    @media screen and (max-width: 800px) {
+      grid-template-columns: repeat(1, 1fr);
     }
+  }
 }
