--- a/src/components/ChartSecton/styles.scss
+++ b/src/components/ChartSecton/styles.scss
@@ -22,6 +22,12 @@
     padding-left: 5rem;
     p {
       padding-bottom: 20px;
+      ul {
+        padding-left: 20px;
+        li {
+          list-style-type: square;
+        }
+      }
     }
   }
 
