--- a/src/components/Header-content/styles.scss
+++ b/src/components/Header-content/styles.scss
@@ -5,13 +5,13 @@
 
     &__left {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         padding-right: 3rem;
         .white {
             color: white;
         }
         h1 {
-            font-size: 3rem;
+            font-size: 2.4rem;
             font-weight: 600;
         }
         .white {
