--- a/src/components/PaymentSection/PaymentCard/styles.scss
+++ b/src/components/PaymentSection/PaymentCard/styles.scss
@@ -1,18 +1,56 @@
 .card {
   background-color: #fff;
   padding: 1rem 2rem;
-  border-radius: 50px;
+  border-radius: 70px;
+  max-width: 500px;
+  height: max-content;
+  cursor: pointer;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-              rgba(0, 0, 0, 0.1) 0px 30px 60px -30px,
-              rgba(10, 37, 64, 0.25) 0px -2px 6px 0px inset;
+    rgba(0, 0, 0, 0.1) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.25) 0px -2px 6px 0px inset;
 
-  h4 {
-    font-size: 2rem;
+  &__title {
+    font-size: 1.5rem;
+    font-weight: 900;
     color: var(--dark-primary);
     text-align: center;
-    padding: 1rem 0;
+    padding: 10px 0;
+    position: relative;
+    &::after {
+      display: block;
+      position: absolute;
+      content: "";
+      width: 45px;
+      height: 3px;
+      background: var(--purple-primary);
+      border-radius: 8px;
+      left: 45%;
+    }
+  }
+
+  &__amount {
+    font-size: 2rem;
+    font-weight: 900;
+    color: var(--dark-primary);
+    text-align: center;
+    padding: 10px 0;
     span {
-      font-size: 1.5rem;
+      font-size: 14px;
+    }
+  }
+
+  &__desc {
+    position: relative;
+    padding-bottom: 20px;
+    &::after {
+      display: block;
+      position: absolute;
+      content: "";
+      height: 1px;
+      width: 90%;
+      bottom: 0px;
+      left: 5%;
+      background-color: var(--border-colour);
     }
   }
 
@@ -22,7 +60,7 @@
     padding: 1rem;
     button {
       padding: 10px 20px;
-      border-radius: 10px;
+      border-radius: 20px;
       background-color: #fff;
       border: 2px solid var(--border-colour);
       outline: none;
@@ -31,46 +69,27 @@
       transition: 0.2s all ease-in-out;
 
       &:hover {
-        background-color: var(--purple-primary);
+        background-color: #886491;
         color: #fff;
       }
-    }
-  }
-
-  &__image {
-    display: flex;
-    justify-content: center;
-    img {
-      width: 80%;
-    }
-  }
-
-  &__plan {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1.5rem 0;
-    img {
-      padding: 0 0.3rem;
     }
   }
 
   &__detail {
     padding: 1rem;
     p {
-        display: flex;
-        align-items: center;
-        padding: 4px 0;
-        img { 
-            width: 28px;
-            padding-right: 10px; 
-        }
-        &:nth-child(5),
-        &:nth-child(6),
-        &:nth-child(7),
-        &:nth-child(8) {
-            color: #b7b7b7;
-        }
+      display: flex;
+      align-items: center;
+      padding: 4px 0;
+      img {
+        width: 28px;
+        padding-right: 10px;
+      }
     }
+  }
+
+  &:hover {
+    // box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   }
 }
