--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -20,6 +20,7 @@
     li {
       position: relative;
       padding: 10px;
+      cursor: pointer;
       &:after {
         background: none repeat scroll 0 0 transparent;
         bottom: 0;
