--- a/src/components/Authentication/SignUp/styles.scss
+++ b/src/components/Authentication/SignUp/styles.scss
@@ -17,13 +17,15 @@
         padding: 10px 0;
         margin: 15px 0;
         border-bottom: 1px solid darkgrey;
-        .name, .email {
-            height: 18px;
-            width: 18px;
+        .name,
+        .email {
+          height: 18px;
+          width: 18px;
         }
-        .lock1, .lock2 {
-            height: 16px;
-            width: 16px;
+        .lock1,
+        .lock2 {
+          height: 16px;
+          width: 16px;
         }
         input {
           border: none;
@@ -63,9 +65,32 @@
   &__right {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     img {
       width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 1200px) {
+    padding: 1rem 0;
+  }
+
+  @media screen and (max-width: 800px) {
+    grid-template-columns: repeat(1, 1fr);
+    &__left {
+      padding: 0 1rem;
+      &--fields {
+        padding: 10px 0;
+      }
+       button {
+        font-size: 14px;
+      }
+    }
+    &__right {
+      padding-top: 3rem;
+      img {
+        width: 80%;
+      }
     }
   }
 }
