--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -5,27 +5,28 @@
   &__content {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    align-items: center;
+    align-items: top;
     img {
       width: 60%;
       padding-right: 30px;
       padding-bottom: 30px;
     }
   }
+
   @media screen and (max-width: 1300px) {
     padding: 5rem 4rem;
     &__content img {
       width: 80%;
     }
   }
-  @media screen and (max-width: 600px) {
-    padding: 5rem 2rem;
+
+  @media screen and (max-width: 500px) {
+    padding: 2rem 2rem 0 2rem;
     &__content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      font-size: 12px;
+      width: 100%;
       img {
-        width: 50%;
+        width: 100%;
       }
     }
   }
