--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -16,78 +16,84 @@
   img {
     padding-left: 0.9rem;
   }
+
+  @media screen and (max-width: 500px) {
+    font-size: 16px;
+  }
 }
 
 .animated {
-    padding: 1rem 2rem;
-    border-radius: 20px;
-    min-width: 220px;
-    width: max-content;
-    background-color: var(--dark-primary);
+  padding: 1rem 2rem;
+  border-radius: 20px;
+  min-width: 220px;
+  width: max-content;
+  background-color: var(--dark-primary);
 
+  @media screen and (max-width: 500px) {
+    min-width: fit-content;
+  }
+
+  .arrow {
+    padding-left: 0.9rem;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .blob1,
+  .blob2 {
+    position: absolute;
+    pointer-events: none;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .blob1 {
+    top: 0;
+    right: 0;
+  }
+
+  .blob2 {
+    bottom: 0;
+    left: 0;
+  }
+
+  &:hover {
+    transition: all 0.5s ease-in-out;
     .arrow {
-        padding-left: 0.9rem;
-        transition: all 0.5s ease-in-out;
+      padding-left: 1.4rem;
     }
-
-    .blob1,
-    .blob2 {
-        position: absolute;
-        pointer-events: none;
-        transition: all 0.5s ease-in-out;
-    }
-
     .blob1 {
-        top: 0;
-        right: 0;
+      transform: translateX(-100px);
     }
-
     .blob2 {
-        bottom: 0;
-        left: 0;
+      transform: translateX(100px);
     }
-
-    &:hover {
-        transition: all 0.5s ease-in-out;
-        .arrow {
-        padding-left: 1.4rem;
-        }
-        .blob1 {
-        transform: translateX(-100px);
-        }
-        .blob2 {
-        transform: translateX(100px);
-        }
-    }
+  }
 }
 
 .primary {
-    padding: 0.5rem 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 0;
+
+  &:hover {
+    border: 1px solid #fff;
+    border-bottom: none;
     border-radius: 0;
+  }
 
-    &:hover {
-        border: 1px solid #fff;
-        border-bottom: none;
-        border-radius: 0;
+  &:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #fff;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
 
-    }
-
-    &:after {
-        background: none repeat scroll 0 0 transparent;
-        bottom: 0;
-        content: "";
-        display: block;
-        height: 2px;
-        left: 50%;
-        position: absolute;
-        background: #fff;
-        transition: width 0.3s ease 0s, left 0.3s ease 0s;
-        width: 0;
-    }
-
-    &:hover:after {
-        width: 100%; 
-        left: 0; 
-    }
+  &:hover:after {
+    width: 100%;
+    left: 0;
+  }
 }
-
