--- a/src/components/CardSection/styles.scss
+++ b/src/components/CardSection/styles.scss
@@ -39,4 +39,16 @@
       justify-content: center;
     }
   }
+
+  @media screen and (max-width: 500px) {
+    &__left {
+      h2 {
+        font-size: 1.5rem;
+      }
+      p {
+        font-size: 14px;
+        line-height: 1.4rem;
+      }
+    }
+  }
 }
