--- a/src/components/FaqSection/Question/styles.scss
+++ b/src/components/FaqSection/Question/styles.scss
@@ -1,28 +1,43 @@
 .question {
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-    padding: 25px;
-    margin: 15px 0;
-    color: var(--purple-primary);
-    cursor: pointer;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  padding: 25px;
+  margin: 15px 0;
+  color: var(--purple-primary);
+  cursor: pointer;
+  transition: 0.4s all ease-in-out;
+
+  h1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    span {
+      display: flex;
+      align-items: center;
+      padding-left: 20px;
+      img {
+        width: 24px;
+      }
+    }
+  }
+  p {
+    padding-top: 10px;
     transition: 0.4s all ease-in-out;
-    
+  }
+
+  @media screen and (max-width: 500px) {
+      padding: 15px;
+      border-radius: 15px;
     h1 {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        span {
-            display: flex;
-            align-items: center;
-            padding-left: 20px;
-            img {
-                width: 24px;
-            }
-        }
+      font-size: 14px;
+      span img {
+        width: 16px;
+      }
     }
     p {
-        padding-top: 10px;
-        transition: 0.4s all ease-in-out;
+      font-size: 12px;
+      line-height: 16px;
     }
+  }
 }
