--- a/src/components/FaqSection/styles.scss
+++ b/src/components/FaqSection/styles.scss
@@ -1,5 +1,15 @@
 .faq {
-    &__questions {
-        padding-top: 20px;
+  &__questions {
+    padding-top: 20px;
+  }
+
+  @media screen and (max-width: 500px) {
+    h3 {
+      font-size: 1.5rem;
     }
+    p {
+      font-size: 14px;
+      line-height: 1.4rem;
+    }
+  }
 }
