--- a/src/components/Header-content/styles.scss
+++ b/src/components/Header-content/styles.scss
@@ -107,4 +107,29 @@
             }
         }
     }
+
+    @media screen and (max-width: 500px) {
+        &__left {
+            h1 {
+                font-size: 1.5rem;
+            }
+            .white {
+                font-size: 14px;
+                line-height: 1.4rem;
+            }
+        }
+
+        &__right {
+            padding-top: 0;
+            .phone {
+                width: 80%;
+            }
+            .message1 {
+                width: 25%;
+            }
+            .ring1, .message2 {
+                width: 20%;
+            }
+        }
+    }
 }
