--- a/src/components/PaymentSection/styles.scss
+++ b/src/components/PaymentSection/styles.scss
@@ -9,4 +9,14 @@
       grid-template-columns: repeat(1, 1fr);
     }
   }
+
+  @media screen and (max-width: 500px) {
+      h3 {
+        font-size: 1.5rem;
+      }
+      p {
+        font-size: 14px;
+        line-height: 1.4rem;
+      }
+    }
 }
